# torn-cli

./: .env.example  .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude/skills/torn-cli/: SKILL.md
.github/workflows/: ci.yml
assets/: endpoint-index.json
docs/: API_COVERAGE.md  FFSCOUTER.md  LOG_PRESETS.md  PERMISSIONS.md  PRETTY_OUTPUT.md  PRIVACY.md  README.md  TESTING.md  TORN_LOGS.md
docs/torn-cli-design-docs/: .env.example  01-product-brief.md  02-cli-command-design.md  03-api-integration.md  04-rust-architecture.md  05-tui-design.md  06-config-cache-security.md  07-output-formats.md  08-mvp-roadmap.md  09-opencode-implementation-prompt.md  README.md  endpoint-index-seed.json
examples/: README.md  agent-brief.md  faction-members.ps1  faction-members.sh  ffscouter-targets.ps1  ffscouter-targets.sh  watch-hospital.ps1  watch-hospital.sh
scripts/: refresh_endpoint_index.py
src/: cache.rs  cli.rs  client.rs  config.rs  endpoints.rs  error.rs  lib.rs  log_presets.rs  logs.rs  main.rs  output.rs  permissions.rs  redaction.rs  request.rs  tui.rs
